fix(browse): left align card body

--- a/css/styles.css
+++ b/css/styles.css
@@ -267,7 +267,6 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   overflow: hidden;
 }
 .gallery .cards .card .card-body .card-title {
