--- a/scss/pages/_browse.scss
+++ b/scss/pages/_browse.scss
@@ -34,13 +34,11 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
 
         overflow: hidden;
 
         .card-title {
           color: $brand-primary;
-          // font-size: 1rem;
         }
       }
     }
